--- a/_pages/contact/index.html
+++ b/_pages/contact/index.html
@@ -16,8 +16,9 @@ permalink: /contact/
   </div>
 </header>
 <div class="c-form-box o-opacity">
-  <form class="c-form" action="{% if site.author-email %}https://formspree.io/{{site.author-email}}{% else %}#{% endif %}"
-    method="POST">
+  <!-- <form class="c-form" action="{% if site.author-email %}https://formspree.io/{{site.author-email}}{% else %}#{% endif %}"
+    method="POST"> -->
+    <form class="c-form" action="https://formspree.io/f/mrgrapee" method="POST">
     <a href="/"><div class="c-form-bnt__close" data-icon='ei-close' data-size='s'></div></a>
     <div class="c-form__title">You can contact me!</div>
     <div class="c-form__group">
