--- a/_pages/contact/index.html
+++ b/_pages/contact/index.html
@@ -35,7 +35,7 @@ permalink: /contact/
     </div>
     <div class="c-form__group">
       <label for="form-text">Your Message (Required)</label>
-      <textarea class="c-form__input" id="form-text" name="text" rows="10" required></textarea>
+      <textarea class="c-form__input" id="form-text" name="message" rows="10" required></textarea>
     </div>
     <div class="c-form__group">
       <button class="c-btn c-btn--secondary c-btn--big c-btn--shadow" type="submit">Send</button>
